objects/TFS_AUP_Application_Permission__c.object
<CustomObject>
    <description>TFS AUP Application Permission</description>
    <fields>
        <fullName>Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable to user type Admin</description>
        <inlineHelpText>Applicable to user type Admin</inlineHelpText>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable to user type agent</description>
        <inlineHelpText>Applicable to user type agent</inlineHelpText>
        <label>Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>Application Name</description>
        <inlineHelpText>Application Name</inlineHelpText>
        <label>Application Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable to user type Manager</description>
        <inlineHelpText>Applicable to user type Manager</inlineHelpText>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable to user type Other</description>
        <inlineHelpText>Applicable to user type Other</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Id__c</fullName>
        <description>Permission Set Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Permission Set Id</inlineHelpText>
        <label>Permission Set Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <description>Permission Set Name</description>
        <inlineHelpText>Permission Set Name</inlineHelpText>
        <label>Permission Set Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable to user type Team Lead</description>
        <inlineHelpText>Applicable to user type Team Lead</inlineHelpText>
        <label>Team Lead</label>
        <type>Checkbox</type>
    </fields>
    <label>TFS AUP Application Permission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Collection_Console</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Admin__c</columns>
        <columns>Agent__c</columns>
        <columns>Manager__c</columns>
        <columns>Other__c</columns>
        <columns>Permission_Set_Id__c</columns>
        <columns>Permission_Set_Name__c</columns>
        <columns>Team_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Name__c</field>
            <operation>equals</operation>
            <value>TFS_AUP_Collections_Console__c</value>
        </filters>
        <label>Collection Console</label>
    </listViews>
    <listViews>
        <fullName>Knowledge</fullName>
        <columns>Application_Name__c</columns>
        <columns>NAME</columns>
        <columns>Admin__c</columns>
        <columns>Agent__c</columns>
        <columns>Manager__c</columns>
        <columns>Other__c</columns>
        <columns>Permission_Set_Id__c</columns>
        <columns>Permission_Set_Name__c</columns>
        <columns>Team_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Name__c</field>
            <operation>equals</operation>
            <value>TFS_AUP_Knowledge_Management__c</value>
        </filters>
        <label>Knowledge</label>
    </listViews>
    <nameField>
        <displayFormat>AUP-{00000}</displayFormat>
        <label>TFS AUP Application Permissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TFS AUP Application Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>